# PythonProject

./: README.md
passgen/: docker-compose.yml
passgen/passgen/: pyproject.toml
passgen/passgen/config/: config.yaml
passgen/passgen/deploy/docker/: Dockerfile
passgen/passgen/passgen/app/: bot.py
passgen/passgen/passgen/core/: __init__.py  config.py
passgen/passgen/passgen/core/entities/: __init__.py  pass_id_spec.py  password.py  password_spec.py
passgen/passgen/passgen/core/services/: __init__.py  base.py
passgen/passgen/passgen/core/services/passid_generator/: __init__.py  base.py
passgen/passgen/passgen/core/services/password_generator/: __init__.py  base.py
passgen/passgen/passgen/core/services/password_service/: __init__.py  base.py
passgen/passgen/passgen/integrations/: __init__.py  base.py
passgen/passgen/passgen/integrations/pass_storage/: __init__.py  pass_storage.py
passgen/passgen/passgen/integrations/pass_storage/models/: __init__.py  password.py
passgen/passgen/passgen/util/: __init__.py  read_config.py
